Finished styling sidebar and dashboard, fixed alignment of nav and dashboard, fixed alignment of sidebar

--- a/style.css
+++ b/style.css
@@ -184,6 +184,7 @@ button[type="submit"] {
 
 .stats-overview {
     margin-top: auto;
+    margin-left: 12px;
 }
 
 section[class="stats-overview"] h3 {
